update requesting csv

--- a/api.ipynb
+++ b/api.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests \n",
     "import json\n",
-    "import xml.etree.ElementTree as ET\n"
+    "import xml.etree.ElementTree as ET\n",
+    "import pandas as pd \n",
+    "\n",
+    "data = pd.read_html(r\"https://boardgamegeek.com/collection/user/007Mrbond?sort=rating&sortdir=desc&minrating=1&rating=10&rated=1\")"
    ]
   },
   {
@@ -197,6 +200,13 @@
     "collection = get_collection_username(username)\n",
     "collection"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
